Added UI for password reset and event note addition

--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MeetingMasterClient</string>
+    <string name="title_activity_password_reset">PasswordReset</string>
+    <string name="title_activity_event_note_addition">EventNoteAddition</string>
 </resources>
