--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
     <string name="title_activity_password_reset">PasswordReset</string>
     <string name="title_activity_event_note_addition">EventNoteAddition</string>
     <string name="title_activity_registration">Registration</string>
+
+    <!--registration strings-->
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="user_name">Username</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="submit_button">Submit</string>
+    <string name="cancel_button">Cancel</string>
 </resources>
