Added UI for profile edition (profile picture section is incomplete)

--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MeetingMasterClient</string>
     <string name="title_activity_password_reset">PasswordReset</string>
     <string name="title_activity_event_note_addition">EventNoteAddition</string>
+    <string name="title_activity_profile_edition">ProfileEdition</string>
 </resources>
