--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="user_name">Username</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
     <string name="phone_number">Phone Number</string>
     <string name="submit_button">Submit</string>
     <string name="cancel_button">Cancel</string>
