--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">MeetingMasterClient</string>
+    <string name="app_name">Meeting Master</string>
     <string name="title_activity_password_reset">PasswordReset</string>
     <string name="title_activity_event_note_addition">EventNoteAddition</string>
     <string name="title_activity_registration">Registration</string>
 
-    <!--registration strings-->
+    <!--registration/login strings-->
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="user_name">Username</string>
@@ -14,4 +14,6 @@
     <string name="phone_number">Phone Number</string>
     <string name="submit_button">Submit</string>
     <string name="cancel_button">Cancel</string>
+    <string name="title_activity_login">Login</string>
+    <string name="register">New User?</string>
 </resources>
