--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_password_reset">PasswordReset</string>
     <string name="title_activity_event_note_addition">EventNoteAddition</string>
     <string name="title_activity_profile_edition">ProfileEdition</string>
+    <string name="title_activity_user_search">UserSearch</string>
+    <string name="title_activity_event_edition">EventEdition</string>
 </resources>
