Started coding Activities for note addition and viewing the list of events, plus a few more changes

--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_profile_edition">ProfileEdition</string>
     <string name="title_activity_user_search">UserSearch</string>
     <string name="title_activity_event_edition">EventEdition</string>
+    <string name="title_activity_event_list_view">EventListView</string>
 </resources>
