Started changing to Retrofit and started profile details activity

--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="decline">Decline</string>
 
     <string name="create_event_button">Create Event</string>
+    <string name="title_activity_profile_details">ProfileDetails</string>
 </resources>
