--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="title_activity_login">Login</string>
     <string name="title_activity_invitation_list">Invitations</string>
     <string name="title_activity_event_creation">EventCreation</string>
+    <string name="title_activity_add_users_to_meeting">AddUserstoMeeting</string>
 
     <!--registration/login strings-->
     <string name="first_name">First Name</string>
@@ -66,5 +67,6 @@
 
     <string name="attendees_list">Attendees List</string>
     <string name="title_activity_attendee_list">AttendeeList</string>
+    <string name="save_changes">Save Changes</string>
 
 </resources>
