Added duration to Event Creation UI and other minor changes

--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="title_activity_attendee_list">AttendeeList</string>
     <string name="save_changes">Save Changes</string>
     <string name="title_activity_event_details">EventDetails</string>
+    <string name="duration">Duration</string>
 
     <!-- menu options -->
     <string name="delete_event">Delete Event</string>
