--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -22,7 +22,8 @@
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="forgot_password">Forgot Password?</string>
-    <string name="phone_number">Phone Number (opt.) e.g. +1 888-555-5555</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="phone_number_opt">Phone Number (Opt.)</string>
     <string name="submit_button">Submit</string>
     <string name="cancel_button">Cancel</string>
     <string name="register">New User?</string>
