Centered "accept" and "decline" buttons on Event Details page

--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="profile_pic">Profile Picture</string>
     <string name="confirm">Confirm</string>
     <string name="upload">Upload</string>
+    <string name="accept">Accept</string>
 
     <!-- event/location strings-->
     <string name="event_details">Event Details</string>
