--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="user_name">Username</string>
-    <string name="email">Email</string>
+    <string name="email">login</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="forgot_password">Forgot Password?</string>
