--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -82,5 +82,6 @@
     <string name="sync_calendar">Sync Calendar</string>
     <string name="title_activity_file_upload_experiments">FileUploadExperiments</string>
     <string name="title_activity_location_suggestion">LocationSuggestion</string>
+    <string name="title_activity_suggestions_list">SuggestionsListActivity</string>
 
 </resources>
