--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -70,6 +70,8 @@
     <string name="channel_arrived_home_description">When another user has arrived home safely</string>
     <string name="channel_live_location_name">Location Tracking</string>
     <string name="channel_live_location_description">When your location is being tracked</string>
+    <string name="channel_leave_now_name">Leave Now</string>
+    <string name="channel_leave_now_description">When the user has to leave to get to an event on time</string>
     <string name="notification_invite_title">Event Invitation</string>
     <string name="notification_invite_body">You have been invited to attend %s</string>
     <string name="notification_edit_title">Event Edited</string>
