Finished activity to suggest a location

--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="location">Location</string>
     <string name="invitees">Invitees</string>
     <string name="invite_button">Invite Users</string>
+    <string name="suggest_button">Suggest Location</string>
 
     <string name="invite_accept">Accept</string>
     <string name="decline">Decline</string>
