--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -64,7 +64,9 @@
     <string name="location">Location</string>
     <string name="invitees">Invitees</string>
     <string name="invite_button">Invite Users</string>
+    <string name="details_suggest_button">Suggest A Location</string>
     <string name="suggest_button">Suggest Location</string>
+    <string name="leave_button">Leave The Event</string>
 
     <string name="invite_accept">Accept</string>
     <string name="decline">Decline</string>
