Implemented file upload in event creation/edition and started working on file download in event details

--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -85,6 +85,8 @@
     <string name="channel_live_location_description">When your location is being tracked</string>
     <string name="channel_leave_now_name">Leave Now</string>
     <string name="channel_leave_now_description">When the user has to leave to get to an event on time</string>
+    <string name="channel_download_file_name">File Download</string>
+    <string name="channel_download_file_description">When the file attachment of an event is being downloaded</string>
     <string name="notification_invite_title">Event Invitation</string>
     <string name="notification_invite_body">You have been invited to attend %s</string>
     <string name="notification_edit_title">Event Edited</string>
