--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -127,8 +127,15 @@
     <string name="desc_service_location_update">Sends your current location to other event attendees</string>
     <string name="start_locationupdateservice">Start LocationUpdateService</string>
     <string name="stop_locationupdateservice">Stop LocationUpdateService</string>
+    <string name="status_text_invited_pending">You\'re invited to this event</string>
+    <string name="status_text_starting">This event is starting soon</string>
+    <string name="status_action_depart">Depart</string>
     <string name="status_text_goingto">You are going to this event</string>
     <string name="status_action_arrive">Arrive</string>
     <string name="status_text_currentlyat">You are at this event</string>
     <string name="status_action_leave">Leave</string>
+    <string name="status_text_leavingfrom">You\'re leaving this event</string>
+    <string name="status_action_arrivehome">Arrive Home</string>
+    <string name="status_text_invited_declined">You\'ve declined this event</string>
+    <string name="status_text_invited_accepted">You\'ve accepted this event</string>
 </resources>
