--- a/meeting_client/app/src/main/res/values/strings.xml
+++ b/meeting_client/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="title_activity_profile_details">User Profile</string>
     <string name="title_activity_attendee_list">Attendees</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_debug_launcher">Debug Launcher</string>
 
     <!--registration/login strings-->
 
